// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Goodbye delay with node 0.12 target Compiles with correct debug log 1`] = `
"DEBUG LOG from TransformAsyncModulesPlugin
    Transforming module ./src/goodbye.js for chunk src_goodbye_js
    Transforming module ./src/goodbye.js for chunk src_parent_js
    Transforming module ./src/parent.js for chunk src_parent_js

goodbye-v0.12 compiled successfully"
`;

exports[`Goodbye delay with node 0.12 target using runtime Compiles with correct debug log 1`] = `
"DEBUG LOG from TransformAsyncModulesPlugin
    Adding dependencies for top level await parsed in ./src/goodbye.js
    Adding and reprocessing dependencies for ./src/parent.js
    Transforming module ./src/goodbye.js for chunk src_goodbye_js
    Transforming module ./src/goodbye.js for chunk src_parent_js
    Transforming module ./src/parent.js for chunk src_parent_js

goodbye-v0.12-runtime compiled successfully"
`;

exports[`Goodbye delay with node 6 target Compiles with correct debug log 1`] = `
"DEBUG LOG from TransformAsyncModulesPlugin
    Transforming module ./src/goodbye.js for chunk src_goodbye_js
    Transforming module ./src/goodbye.js for chunk src_parent_js
    Transforming module ./src/parent.js for chunk src_parent_js

goodbye-v6 compiled successfully"
`;

exports[`Goodbye delay with node 6 target using runtime Compiles with correct debug log 1`] = `
"DEBUG LOG from TransformAsyncModulesPlugin
    Adding dependencies for top level await parsed in ./src/goodbye.js
    Adding and reprocessing dependencies for ./src/parent.js
    Transforming module ./src/goodbye.js for chunk src_goodbye_js
    Transforming module ./src/goodbye.js for chunk src_parent_js
    Transforming module ./src/parent.js for chunk src_parent_js

goodbye-v6-runtime compiled successfully"
`;

exports[`Goodbye delay with node 8 target Compiles with correct debug log 1`] = `
"DEBUG LOG from TransformAsyncModulesPlugin
    Transforming module ./src/goodbye.js for chunk src_goodbye_js
    Transforming module ./src/goodbye.js for chunk src_parent_js
    Transforming module ./src/parent.js for chunk src_parent_js

goodbye-v8 compiled successfully"
`;

exports[`Goodbye delay with node 8 target using runtime Compiles with correct debug log 1`] = `
"DEBUG LOG from TransformAsyncModulesPlugin
    Transforming module ./src/goodbye.js for chunk src_goodbye_js
    Transforming module ./src/goodbye.js for chunk src_parent_js
    Transforming module ./src/parent.js for chunk src_parent_js

goodbye-v8-runtime compiled successfully"
`;
